RESOLVED FIXED112585
[V8] Crash when accessing onclick attribute of document from XMLHttpRequest
https://bugs.webkit.org/show_bug.cgi?id=112585
Summary [V8] Crash when accessing onclick attribute of document from XMLHttpRequest
Adam Barth
Reported 2013-03-18 09:32:34 PDT
[V8] Crash when accessing onclick attribute of document from XMLHttpRequest
Attachments
Patch (4.14 KB, patch)
2013-03-18 09:33 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2013-03-18 09:33:43 PDT
Eric Seidel (no email)
Comment 2 2013-03-18 09:35:52 PDT
Comment on attachment 193582 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-03-18 09:59:20 PDT
Comment on attachment 193582 [details] Patch Clearing flags on attachment: 193582 Committed r146074: <http://trac.webkit.org/changeset/146074>
WebKit Review Bot
Comment 4 2013-03-18 09:59:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.