[V8] Crash when accessing onclick attribute of document from XMLHttpRequest https://bugs.webkit.org/show_bug.cgi?id=112585

Reviewed by Eric Seidel.

Source/WebCore:

This ASSERT was bogus. The frame can be 0 for frameless documents, like
those created by XMLHttpRequest. When there is no frame, we act as if
JavaScript was disabled, which it is.

Test: fast/events/xhr-onclick-crash.html

* bindings/v8/V8LazyEventListener.cpp:
(WebCore::V8LazyEventListener::prepareListenerObject):

LayoutTests:

* fast/events/resources/onclick.html: Added.
* fast/events/xhr-onclick-crash-expected.txt: Added.
* fast/events/xhr-onclick-crash.html: Added.


Canonical link: https://commits.webkit.org/130882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146074 268f45cc-cd09-0410-ab3c-d52691b4dbfc